# eve_campaigns

./: .coveragerc  .gitignore  Containerfile  HISTORY.md  Makefile  mkdocs.yml  pyproject.toml  setup.py  tox.ini
.github/workflows/: main.yml  release.yml
eve_campaigns/: __main__.py  manage.py
eve_campaigns/eve_campaigns/: asgi.py  settings.py  urls.py  wsgi.py
eve_campaigns/timers/: apps.py  views.py
eve_campaigns/timers/templates/timers/: base.html  index.html
test/: conftest.py
